Ultima Version Octubre 26 2025

--- a/Web NF4.5/timetrakin.net/Views/Movimiento/Index.cshtml
+++ b/Web NF4.5/timetrakin.net/Views/Movimiento/Index.cshtml
@@ -175,9 +175,22 @@
             { "index": 7, "actividad": "CONFIGURACION DE EDA" },
             { "index": 8, "actividad": "CONFIGURACION DE PANTALLAS" },
             { "index": 9, "actividad": "CONFIGURACION DE BASCULAS" },
-            { "index": 10,"actividad": "CONFIGURACION DE MOVILES" },
-            { "index": 11,"actividad": "GARANTIAS" },
-            { "index": 12,"actividad": "SIN ACTIVIDADES ADICIONALES" }
+            { "index": 10, "actividad": "CONFIGURACION DE MOVILES" },
+            { "index": 11, "actividad": "GARANTIAS" },
+            { "index": 12, "actividad": "SIN ACTIVIDADES ADICIONALES" },
+            { "index": 13, "actividad": "HEALTH CHECK" },
+            { "index": 14, "actividad": "RECORRIDO" },
+            { "index": 15, "actividad": "REVISIÓN SITE" },
+            { "index": 16, "actividad": "REPORTE" },
+            { "index": 17, "actividad": "REUNIÓN" },
+            { "index": 18, "actividad": "INFRAESTRUCTURA" },
+            { "index": 19, "actividad": "MANEJO DE ASSET" },
+            { "index": 20, "actividad": "CARGA TIME TRACKING" },
+            { "index": 21, "actividad": "CURSO" },
+            { "index": 22, "actividad": "ACTIVIDAD SIN TICKET" },
+            { "index": 23, "actividad": "ACTIVIDAD ADMINISTRATIVA" },
+            { "index": 24, "actividad": "BODEGA" },
+            { "index": 26, "actividad": "APOYO HAND AND EYES" }
         ];
 
         $scope.modificar = function () {
